fixed spacing for upstream links

--- a/less/new.less
+++ b/less/new.less
@@ -1552,10 +1552,14 @@ h4.mission {
     font-weight: normal;
 }
 
+#leftColumnPoint {
+    margin-top:16px;
+}
+
 #pointArea {
 	position: relative;
 	margin-left:0px;
-    margin-top:16px;
+    margin-top:4px;
 	padding-top: 10px;
 }
 
